<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="12dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/hoursTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/hoursTextView" />

    <EditText
        android:id="@+id/hoursInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hoursInput"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/overtimeHoursView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/overtimeHoursView" />
    <EditText
        android:id="@+id/overtimeHoursInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/overtimeHoursInput"/>
    <TextView
        android:id="@+id/hourlyRateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/hourlyRateView" />
    <EditText
        android:id="@+id/hourlyRateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/hourlyRateInput"
        />
    <TextView
        android:id="@+id/overtimeHourlyRateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/overtimeHourlyRateView" />
    <EditText
        android:id="@+id/overtimeHourlyRateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/overtimeHourlyRateInput"
        />
    <TextView
        android:id="@+id/taxRateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/taxRateView" />
    <EditText
        android:id="@+id/taxRateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/taxRateInput"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:text="@string/resetBtn" />

        <Button
            android:id="@+id/calculateBtn"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:text="@string/calculateBtn" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/employeesSpinner"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:prompt="@string/select_employee_prompt"/>
            />

        <Button
            android:id="@+id/addDataBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addDataBtn" />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calculationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>

</LinearLayout>