<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="12dp"
    tools:context=".EmployeesActivity" >


    <TextView
        android:id="@+id/employeeIdTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/employeeId"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp" />


    <Spinner
        android:id="@+id/employeesSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:prompt="@string/select_employee_prompt"
        android:spinnerMode="dropdown" />



    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterEmployeeName"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/lastNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lastName"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterLastName"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/roleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/role"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/roleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterEmployeeRole"
        android:inputType="text" />


    <TextView
        android:id="@+id/salaryTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/totalSalaryEarned"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginBottom="12dp">

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resetBtn" />

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/updateBtn" />
        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deleteBtn" />


    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="-12dp">

    <Button
        android:id="@+id/addBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btnAdd" />
</LinearLayout>

    <TextView
        android:id="@+id/previousPaystubsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/previousPay"
        android:textSize="18sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/noPaystubsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NoPrevious"
        android:textSize="16sp"
        android:visibility="gone"

        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/paystubsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical" />

</LinearLayout>
