<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/history_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="12dp">

    <TextView
        android:id="@+id/totalAmountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/defaultTotalAmount"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/selectNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastShow"
            android:textSize="16sp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/numberOfPayrollsEditText"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/lastShowNum"
            android:inputType="number"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/applyFilterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applyBtn" />
    </LinearLayout>

    <TextView
        android:id="@+id/noPaystubTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NoPayAvaliable"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/paystubsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

</LinearLayout>
